feat: 账号管理-邮箱验证码
--story=118571501
# Reviewed, transaction id: 14932

--- a/front/src/views/bill/account/create-account/create-second-account/index.scss
+++ b/front/src/views/bill/account/create-account/create-second-account/index.scss
@@ -59,7 +59,7 @@
         }
 
         .disabled-option {
-          color: #C4C6CC;
+          color: #c4c6cc;
           cursor: not-allowed;
         }
 
@@ -69,19 +69,6 @@
           .active-icon {
             margin-left: auto;
           }
-        }
-      }
-
-      .email-tip {
-        font-size: 12px;
-        color: #63656E;
-        display: flex;
-        align-items: center;
-
-        .email-tip-icon {
-          color: #EA3636;
-          font-size: 14px;
-          margin-right: 9px;
         }
       }
 
@@ -141,7 +128,7 @@
       .info-title {
         font-weight: 700;
         font-size: 14px;
-        color: #63656E;
+        color: #63656e;
         margin-bottom: 8px;
       }
     }
