--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -1,7 +1,7 @@
 .host-application-form-wrapper {
   .apply-form-wrapper {
     margin-top: 52px;
-    padding: 0 40px;
+    padding: 24px;
   }
 
   .item-warp-component {
@@ -15,10 +15,6 @@
     font-weight: 700;
     font-size: 14px;
     color: #313238;
-  }
-
-  .card-content {
-    padding: 0 28px;
   }
 
   .operation-column {
@@ -160,7 +156,7 @@
         flex: 1;
         text-align: right;
       }
-      .content{
+      .content {
         line-height: 26px;
       }
     }
