--- a/front/src/components/CommonCard/index.scss
+++ b/front/src/components/CommonCard/index.scss
@@ -15,12 +15,19 @@
 
   .common-card-content {
     padding: 0 28px;
-    width: 80%;
   }
 
   .common-card-content-grid-layout {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .common-card {
+    .common-card-content {
+      width: 80%;
+    }
   }
 }
