feat: 自研云主机购买支持计费模式 (merge request !1351)
--story=118841795
* feat: 自研云购买主机计费模式优化
* feat: 自研云主机购买支持计费模式

--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -161,4 +161,13 @@
       }
     }
   }
+
+  .form-item-tips {
+    font-size: 12px;
+    line-height: 20px;
+    margin-top: 4px;
+    .bk-link {
+      font-size: 12px;
+    }
+  }
 }
