SCR-主机回收-单据详情-回收单号增加颜色 (merge request !1378) --story=119240380

--- a/front/src/views/ziyanScr/cvm-produce/index.scss
+++ b/front/src/views/ziyanScr/cvm-produce/index.scss
@@ -9,6 +9,12 @@
         right: -22px;
     }
   }
+  .success-container {
+    display: flex;
+    div + div {
+      margin-left: 5px;
+    }
+  }
 .sub-order-num,.username {
     color: #409eff;
     cursor: pointer;
