fix: bpass单据、账号密钥、时间等问题修复 (merge request !1389) --story=119448480

--- a/front/src/views/bill/account/account-detail/first-level-account-detail/index.scss
+++ b/front/src/views/bill/account/account-detail/first-level-account-detail/index.scss
@@ -38,3 +38,12 @@
     }
   }
 }
+
+.validate-btn-container {
+  width: 100%;
+  display: flex;
+  .validate-btn {
+    margin-right: auto;
+    min-width: 88px;
+  }
+}
