feat: 设计需求-替换海垒menu-icon (merge request !1398) --story=119135454

--- a/front/src/assets/iconfont/style.css
+++ b/front/src/assets/iconfont/style.css
@@ -299,7 +299,7 @@ url("fonts/iconcool.eot?#iefix") format("embedded-opentype");
 .bkhcm-icon-res-shelves:before {
 	content: "\e164";
 }
-.bkhcm-icon-shengchan:before {
+.bkhcm-icon-cvm-produce:before {
 	content: "\e165";
 }
 .bkhcm-icon-bill-manage:before {
