feat: cvm生产支持计费模式 (merge request !1419)
--story=118841795

--- a/front/src/views/ziyanScr/cvm-produce/component/create-order/cvm-form/index.scss
+++ b/front/src/views/ziyanScr/cvm-produce/component/create-order/cvm-form/index.scss
@@ -87,3 +87,11 @@
 .alert-container {
   margin-top: 10px;
 }
+.form-item-tips {
+    font-size: 12px;
+    line-height: 20px;
+    margin-top: 4px;
+    .bk-link {
+        font-size: 12px;
+    }
+}
