feat: 批量调整资源预测需求 (merge request !1415)
--stoty=119698486
--stoty=119698477

--- a/front/src/components/common-sideslider/index.module.scss
+++ b/front/src/components/common-sideslider/index.module.scss
@@ -3,6 +3,11 @@
     padding: 24px 40px;
   }
 
+  .renderIfContent {
+    height: calc(100vh - 51px);
+    overflow-y: scroll;
+  }
+
   .footer {
     :global(.bk-button) {
       min-width: 88px;
