feat: 新增资源预调整与单据管理tab资源预测 feat: 单据管理和单据详情页面
--story=119640830

--- a/front/src/components/resource-plan/applications/list/search/index.module.scss
+++ b/front/src/components/resource-plan/applications/list/search/index.module.scss
@@ -1,5 +1,7 @@
 .search-grid {
   display: grid;
+  overflow-x: auto;
+  padding-bottom: 8px;
   grid-template-columns: 405px 405px 405px;
   gap: 24px;
   row-gap: 16px;
