--- a/front/src/views/service/resource-plan/resource-manage/detail/index.module.scss
+++ b/front/src/views/service/resource-plan/resource-manage/detail/index.module.scss
@@ -1,3 +1,11 @@
-.home{
+.resource-forecast-details-section{
+  position: relative;
   padding: 15px;
+  margin-top: 54px;
+
+  .button {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+  }
 }
