feat: 单据管理和预测列表调整 --story=119640830 单据管理和单据详情页面 # Reviewed, transaction id: 19578 (merge request !1487)
Squash merge branch 'feature-plan' into 'bcc/feature-plan'
feat: 单据管理和预测列表调整
--story=119640830 单据管理和单据详情页面
# Reviewed, transaction id: 19578

 



TAPD: --story=119640830

--- a/front/src/components/resource-plan/applications/detail/approval/index.module.scss
+++ b/front/src/components/resource-plan/applications/detail/approval/index.module.scss
@@ -43,3 +43,14 @@
     }
   }
 }
+
+.error-message {
+  margin-left: 13.5px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  color: #d9001b;
+  .error-message-color {
+    color: #d9001b !important;
+  }
+}
