--- a/front/src/components/resource-plan/resource-manage/list/table/index.module.scss
+++ b/front/src/components/resource-plan/resource-manage/list/table/index.module.scss
@@ -1,23 +1,28 @@
-.toolbar-buttons {
+.table-header {
   display: flex;
-  column-gap: 8px;
+  justify-content: space-between;
   margin-bottom: 16px;
-}
 
-.overview {
-  display: flex;
-  justify-content: flex-end;
-  column-gap: 32px;
-  margin-bottom: 16px;
-  font-size: 12px;
-
-  .cpu-stats {
+  .toolbar-buttons {
     display: flex;
-    column-gap: 16px;
+    column-gap: 8px;
   }
 
-  .num {
-    color: #e6a23c;
+  .overview {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    column-gap: 32px;
+    font-size: 12px;
+
+    .cpu-stats {
+      display: flex;
+      column-gap: 16px;
+    }
+
+    .num {
+      color: #e6a23c;
+    }
   }
 }
 
