fix: 预测联调问题调整 --story=118028902 --story=119698482 (merge request !1513)
Squash merge branch 'feature-plan-1.1' into 'bcc/feature-plan'
fix: 预测联调问题调整
--story=118028902
--story=119698482
 



TAPD: --story=119698482
TAPD: --story=119698445
TAPD: --story=118028902

--- a/front/src/components/resource-plan/resource-manage/list/table/index.module.scss
+++ b/front/src/components/resource-plan/resource-manage/list/table/index.module.scss
@@ -1,27 +1,39 @@
-.table-header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 16px;
+.table-wrapper {
+  width: 100%;
+  background: #fff;
+  box-shadow: 0 2px 4px 0 #1919290d;
+  border-radius: 2px;
+  padding: 16px 24px;
 
-  .toolbar-buttons {
+  .table-header {
     display: flex;
-    column-gap: 8px;
-  }
+    justify-content: space-between;
+    margin-bottom: 16px;
 
-  .overview {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    column-gap: 32px;
-    font-size: 12px;
-
-    .cpu-stats {
+    .toolbar-buttons {
       display: flex;
-      column-gap: 16px;
+      column-gap: 8px;
+
+      .button {
+        width: 102px;
+      }
     }
 
-    .num {
-      color: #e6a23c;
+    .overview {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      column-gap: 32px;
+      font-size: 12px;
+
+      .cpu-stats {
+        display: flex;
+        column-gap: 16px;
+      }
+
+      .num {
+        color: #e6a23c;
+      }
     }
   }
 }
