--- a/front/src/components/resource-plan/applications/list/search/index.module.scss
+++ b/front/src/components/resource-plan/applications/list/search/index.module.scss
@@ -2,7 +2,7 @@
   display: grid;
   overflow-x: auto;
   padding-bottom: 8px;
-  grid-template-columns: 405px 405px 405px 405px;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 24px;
   row-gap: 16px;
   margin-bottom: 24px;
