feat: 主机申请-物理机取消预测及审批失败信息调整 --story=119970250 主机申请-无法选择机型 (merge request !1531)
Squash merge branch 'feature-plan' into 'bcc/feature-plan'
feat: 主机申请-物理机取消预测及审批失败信息调整
--story=119970250 主机申请-无法选择机型

 



TAPD: --story=119970250

--- a/front/src/components/resource-plan/applications/detail/approval/index.module.scss
+++ b/front/src/components/resource-plan/applications/detail/approval/index.module.scss
@@ -19,7 +19,7 @@
       color: #2dcb56;
     }
 
-    :global(.bkhcm-icon-38moxingshibai-01) {
+    :global(.bkhcm-icon-38moxingshibai-01),:global(.bkhcm-icon-close-circle-fill) {
       color: #cc4053;
     }
   }
@@ -45,6 +45,7 @@
 }
 
 .error-message {
+  max-width: 1475px;
   margin-left: 13.5px;
   justify-content: center;
   display: flex;
