--- a/front/src/components/resource-plan/add/basic/index.module.scss
+++ b/front/src/components/resource-plan/add/basic/index.module.scss
@@ -30,4 +30,22 @@
       height: 100%;
     }
   }
+  .in-thirteen-weeks {
+    text-align: center;
+    cursor: pointer;
+    padding: 10px 0;
+  }
+  :global(.is-thirteen) {
+    color: #5594fa;
+  }
+}
+
+.plan-mod-timepicker-tip {
+  line-height: 20px;
+  font-size: 12px;
+  .time-txt {
+    color: #EA3636;
+    font-size: 11px;
+    margin: 2px;
+  }
 }
