--- a/front/src/views/home/index.scss
+++ b/front/src/views/home/index.scss
@@ -12,7 +12,12 @@
         overflow: hidden !important;
 
         .navigation-breadcrumb {
+            display: flex;
+            align-items: center;
             height: 52px;
+            padding: 0 24px;
+            background: #fff;
+            box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.04);
         }
         .navigation-resource {
             min-height: 88px;
