feat: 资源预测-审批流-展示CRP的审批流程节点 (merge request !1706)
--story=120385085

--- a/front/src/components/resource-plan/applications/detail/approval/index.module.scss
+++ b/front/src/components/resource-plan/applications/detail/approval/index.module.scss
@@ -9,6 +9,12 @@
     color: #313238;
     font-size: 14px;
 
+    .audit-status {
+      display: inline-flex;
+      align-items: center;
+      margin-left: 50px;
+    }
+
     :global(.hcm-icon) {
       font-size: 21px;
       margin-right: 13.5px;
@@ -19,27 +25,9 @@
       color: #2dcb56;
     }
 
-    :global(.bkhcm-icon-38moxingshibai-01),:global(.bkhcm-icon-close-circle-fill) {
+    :global(.bkhcm-icon-38moxingshibai-01),
+    :global(.bkhcm-icon-close-circle-fill) {
       color: #cc4053;
-    }
-  }
-
-  .links {
-    display: flex;
-    align-items: center;
-
-    .link span {
-      display: flex;
-      align-items: center;
-
-      span {
-        margin-left: 6px;
-        font-size: 12px;
-      }
-    }
-
-    .link +.link {
-      margin-left: 26px;
     }
   }
 }
@@ -55,7 +43,7 @@
     color: #d9001b !important;
   }
 }
-.title{
+.title {
   > span {
     margin-bottom: 0px !important;
   }
