chore: 隐藏详情页面面包屑&优化主机库存布局 (merge request !1778)

--- a/front/src/views/business/host-inventory/index.module.scss
+++ b/front/src/views/business/host-inventory/index.module.scss
@@ -1,6 +1,17 @@
-.table-wrapper {
-  height: calc(100% - 234px);
+.page {
   padding: 24px;
+  height: 100%;
+
+  .filter {
+    margin-bottom: 12px;
+    background-color: #fff;
+  }
+
+  .table {
+    height: calc(100% - 246px);
+    padding: 24px;
+    background-color: #fff;
+  }
 }
 
 .buttons {
