--- a/front/src/views/ziyanScr/host-recycle/bill-detail/index.scss
+++ b/front/src/views/ziyanScr/host-recycle/bill-detail/index.scss
@@ -1,7 +1,6 @@
 .bill-detail {
-    margin: 0 10px;
-    margin-top: 72px;
-    padding: 0 15px;
+    margin: 78px 24px 0;
+    padding: 16px 24px;
     background-color: #fff;
     .bk-button+.bk-button {
         margin-left: 10px;
