fix: CVM生产创建或查询库存计费模式说明遮挡了区域 (merge request !1846)
--bug=131193451

--- a/front/src/views/ziyanScr/cvm-produce/component/create-order/index.scss
+++ b/front/src/views/ziyanScr/cvm-produce/component/create-order/index.scss
@@ -6,3 +6,9 @@
         margin-left: 10px;
     }
 }
+.cvm-produce-create-order-dialog {
+  .bk-modal-content {
+    max-height: 80vh;
+    overflow: auto;
+  }
+}
