--- a/front/src/views/ziyanScr/resource-manage/create/index.scss
+++ b/front/src/views/ziyanScr/resource-manage/create/index.scss
@@ -11,3 +11,12 @@
     width: 200px;
   }
 }
+
+.online-confirm-dialog {
+  .copy-button-group {
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+}
