feat: 资源预测-新增资源预测-基本信息文案调整 (merge request !1861)
--story=121094423

--- a/front/src/views/business/resource-plan/add/basic/index.module.scss
+++ b/front/src/views/business/resource-plan/add/basic/index.module.scss
@@ -12,8 +12,9 @@
       }
   }
   .biz-list{
-    width: 450px;
-    color: #ccc;
+    grid-column: 1 / 2; 
+    width: 740px;
+    line-height: normal;
   }
   .forecast-type{
     grid-column: 1 / 2; 
