--- a/front/src/views/ziyanScr/recycle-server-room/table/index.module.scss
+++ b/front/src/views/ziyanScr/recycle-server-room/table/index.module.scss
@@ -1,6 +1,8 @@
 .search {
   display: flex;
   align-items: center;
+  position: relative;
+  z-index: 3;
 
   .search-label {
     margin-right: 8px;
