feat: 主机申请需求类型选择交互优化 (merge request !1976)
--story=121536132

--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -70,6 +70,17 @@
   .status-FAILED {
     color: #ea3636;
   }
+
+  .basic-top-row {
+    .alert-content {
+      margin-bottom: 24px;
+      margin-top: -8px;
+
+      .bk-alert {
+        border: none;
+      }
+    }
+  }
 }
 
 .add-resource-requirements-sideslider {
