--- a/front/src/assets/iconfont/style.css
+++ b/front/src/assets/iconfont/style.css
@@ -323,3 +323,18 @@ url("fonts/iconcool.eot?#iefix") format("embedded-opentype");
 .bkhcm-icon-my-apply:before {
 	content: "\e16c";
 }
+.bkhcm-icon-regular:before {
+	content: "\e16e";
+}
+.bkhcm-icon-rolling-server:before {
+	content: "\e16f";
+}
+.bkhcm-icon-lantern:before {
+	content: "\e170";
+}
+.bkhcm-icon-green-channel-rocket:before {
+	content: "\e171";
+}
+.bkhcm-icon-host-multi:before {
+	content: "\e172";
+}
