fix: CVM生产增加预测业务逻辑&组件结构样式调整 (merge request !1934) --bug=133146723

--- a/front/src/views/ziyanScr/cvm-produce/component/create-order/index.scss
+++ b/front/src/views/ziyanScr/cvm-produce/component/create-order/index.scss
@@ -1,10 +1,14 @@
 .form-item-container {
-    display: flex;
+  display: flex;
+
+  .i-form-control {
+    width: 300px;
+  }
 }
 .dialog-footer-btn {
-    .bk-button+.bk-button {
-        margin-left: 10px;
-    }
+  .bk-button + .bk-button {
+    margin-left: 10px;
+  }
 }
 .cvm-produce-create-order-dialog {
   .bk-modal-content {
