--- a/front/src/views/ziyanScr/cvm-produce/component/create-order/cvm-form/index.scss
+++ b/front/src/views/ziyanScr/cvm-produce/component/create-order/cvm-form/index.scss
@@ -1,91 +1,44 @@
-.cvm-capacity-card {
-  position: absolute;
-  left: calc(100% + 170px);
-  top: -50%;
-  min-width:380px;
-  box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
-  .cvm-capacity {
-      &-item {
-          display: flex;
-      }
-      &-detail{
-          margin-left: 5px;
-          color: #909399;
-      }
+.cvm-produce-create-form {
+  .i-form-control {
+    width: 300px;
   }
-  .cvm-capacity-value {
-      margin-left: 5px;
-      color: #e6a23c;
-  }
-}
-.bk-popover {
-  .sub-capacity-value {
-      margin-left: 5px;
-      color: #e6a23c;
-  }
-}
 
-.form-item-container {
-  display: flex;
-  .bk-select+.bk-select {
-      margin-left: 10px;
-  }
-  .vpc-select,.subnet-select{
-    width: 30%;
-  }
-  .device-type-cls {
+  .i-disk-form-item {
+    .i-content {
       display: flex;
       align-items: center;
-      .bk-checkbox{
-          margin-left: 10px;
+
+      .i-disk-type-select {
+        width: 60%;
+        flex-shrink: 0;
       }
-      .device-type-check {
-          display: flex;
-          align-items: center;
-          div+div{
-              margin-left: 10px;
-          }
+
+      .i-unit {
+        margin: 0 8px;
       }
+    }
+
+    .i-tips {
+      margin-top: 4px;
+      color: $warning-color;
+      font-size: 12px;
+      line-height: normal;
+    }
   }
-}
-.bk-form-content {
-  .data-item-flex {
-      display: flex;
-      align-items: center;
-      position: relative;
-      div+div {
-          margin-left: 10px;
-      }
-      .bk-input {
-          width: 165px;
-      }
+
+  .advance-set {
+    margin-left: 80px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    color: #409eff;
   }
-  .c-warning {
-      color: #e6a23c;
-  }
-}
-.require-number {
-  display: flex;
-  .bk-form-content{
-      .bk-input {
-          width: 165px;
-      }
-  }
-}
-.advance-set{
-  margin-left: 80px;
-  margin-bottom: 10px;
-  cursor: pointer;
-  color: #409eff;
-}
-.alert-container {
-  margin-top: 10px;
-}
-.form-item-tips {
+
+  .form-item-tips {
     font-size: 12px;
     line-height: 20px;
     margin-top: 4px;
     .bk-link {
-        font-size: 12px;
+      font-size: 12px;
     }
+  }
 }
