feat: 机房裁撤列展示交互优化解决卡顿问题 (merge request !1998)
Squash merge branch 'feat-dissolve-pref' into 'bcc/v1.7.x'
feat: 机房裁撤列展示交互优化解决卡顿问题

--story=121524788

 



TAPD: --story=121524788

--- a/front/src/views/ziyanScr/recycle-server-room/dialog.module.scss
+++ b/front/src/views/ziyanScr/recycle-server-room/dialog.module.scss
@@ -1,24 +1,59 @@
-.total-num{
+.total-num {
   font-size: 12px;
   margin-left: 8px;
 }
-.title{
-  margin: 10px 0;
+.title {
+  margin-bottom: 10px;
 }
-.expand-row{
+.expand-row {
   padding: 10px;
   width: 40%;
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   column-gap: 150px;
   row-gap: 10px;
-  .expand-item{
+  .expand-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 12px;
-    span{
+    span {
       color: #99a8bf;
     }
+  }
+}
+
+.dialog-content {
+  height: 65vh;
+  display: flex;
+  .module-list {
+    width: 210px;
+    max-height: 100%;
+    overflow-y: auto;
+    .module-item {
+      display: flex;
+      align-items: center;
+      padding: 10px 12px;
+      cursor: pointer;
+
+      .item-count {
+        font-style: normal;
+        font-size: 12px;
+        margin-left: auto;
+        color: #979BA5;
+      }
+
+      &:hover {
+        background: #f5f7fa;
+      }
+      &.active {
+        background: #e1ecff;
+        color: #3a84ff;
+      }
+    }
+  }
+  .data-table {
+    flex: 1;
+    margin-left: 12px;
   }
 }
