feat: 资源预测单-在流程节点支持ITSM审批&提示优化 (merge request !1947)
Squash merge branch 'bcc/feat-ticket-audit' into 'bcc/v1.7.x'

* chore: 优化审批人为空的显示# Reviewed, transaction id: 29999
* chore: 补充催单按钮ts&还原webpack启动端口配置# Reviewed, transaction id: 29991
* feat: 审批流优化问题修复# Reviewed, transaction id: 29592
* chore: 催单增加默认弹出# Reviewed, transaction id: 29556
* chore: 审批流样式优化# Reviewed, transaction id: 29547
* feat: 审批流程提示优化
* feat: 资源预测单-在流程节点支持ITSM审批
* refactor: 审批流组件优化

--- a/front/src/assets/iconfont/style.css
+++ b/front/src/assets/iconfont/style.css
@@ -26,6 +26,9 @@ url("fonts/iconcool.eot?#iefix") format("embedded-opentype");
 .bkhcm-icon-minus-circle:before {
 	content: "\e14a";
 }
+.bkhcm-icon-notice:before {
+	content: "\e176";
+}
 .bkhcm-icon-plus-circle:before {
 	content: "\e10c";
 }
@@ -269,8 +272,17 @@ url("fonts/iconcool.eot?#iefix") format("embedded-opentype");
 .bkhcm-icon-close:before {
 	content: "\e15d";
 }
+.bkhcm-icon-delete:before {
+	content: "\e173";
+}
 .bkhcm-icon-release-note:before {
 	content: "\e16d";
+}
+.bkhcm-icon-user2:before {
+	content: "\e175";
+}
+.bkhcm-icon-configuration:before {
+	content: "\e174";
 }
 .bkhcm-icon-jiebang:before {
 	content: "\e156";
