feat: CVM生产-申请单据顺序优化 (merge request !2052)
Squash merge branch 'bcc/feat-v1.7.x#122066530' into 'bcc/v1.7.x'

* feat: CVM生产去掉春保资源池
* chore: 小调整# Reviewed, transaction id: 31627
* feat: CVM生产-申请单据顺序优化

--- a/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
+++ b/front/src/views/ziyanScr/hostApplication/components/application-form/index.scss
@@ -171,6 +171,12 @@
       font-size: 12px;
     }
   }
+
+  .network-info-collapse-panel {
+    .bk-collapse-content {
+      padding: 16px 52px !important;
+    }
+  }
 }
 
 .config-ticket-card {
