feat: 主机库存与预测和一键申领关联 (merge request !2067)
Squash merge branch 'feat-inventory-and-resplan' into 'bcc/v1.7.x'

* chore: 查询需求类型对应的0BS项目类型列表接口变更为post
* fix: 预测详情样式和主机增加资源需求保存按钮disabled的问题修复
* feat: 主机库存菜单位置和主机一键申领默认查询条件及申请主机页面样式调整
* Merge remote-tracking branch 'origin/bcc/v1.7.x' into feat-inventory-and-resplan
* feat: 一键申领的提示语和预测列表列宽优化
* feat: 主机库存跳转至增加预测回填机型规格和机型类型
* feat: 主机申请-一键申领-按库存或预测申领重构
* feat: 新增req-type-value组件
* feat: 业务下主机库存中添加预测情况、一键申请、增加预测
* wip: 资源预测一键申领与主机库存一键申领关联预测# Reviewed, transaction id: 29495

--- a/front/src/views/business/resource-plan/detail/index.module.scss
+++ b/front/src/views/business/resource-plan/detail/index.module.scss
@@ -1,6 +1,7 @@
 .resource-forecast-details-section{
   position: relative;
   padding: 15px;
+  margin-top: 54px;
 
   .button {
     position: absolute;
