feat: 负载均衡-批量删除监听器-权重校验 (#1534)
* feat: CLB-七层监听器删除时需要查询url所绑目标组的权重 --story=122663124

* feat: 负载均衡批量删除监听器-单次最大限制20- --story=123656914

--- a/front/src/views/business/load-balancer/clb-view/specific-clb-manager/listener-list/index.scss
+++ b/front/src/views/business/load-balancer/clb-view/specific-clb-manager/listener-list/index.scss
@@ -12,6 +12,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+
   span {
     width: 14px;
     height: 16px;
