--- a/front/src/views/ziyanScr/cvm-model/CreateDevice/index.scss
+++ b/front/src/views/ziyanScr/cvm-model/CreateDevice/index.scss
@@ -3,3 +3,13 @@
     width: 250px;
   }
 }
+
+.create-device-dialog-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  .mr-auto {
+    margin-right: auto;
+  }
+}
